fix locomotive scroll on mobile

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
 
 html {
   font-size: 16px;
+  height: 100%;
 }
 
 html.has-scroll-smooth {
@@ -69,6 +70,7 @@ body {
   animation-duration: 1.5s;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
+  height: 100%;
 }
 
 main {
